---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: ??.??.????
  Changes:
    - Decreased dock collisionbox to allow walking between them.
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 15. 07. 2022
  Changes:
    - Dock now have a more sensible recipe.
  Bugfixes:
    - Fixed incompatibility with other mods which define recipes differently, like Spidertron Tiers. (Thanks runtimethecat!)
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 15. 07. 2022
  Changes:
    - Removed Rocket Launcher as Space Spidertron ingredient.
    - Added Rocket Fuel as ingredient to Sapce Spidertron when SE is not installed.
    - Dependency on Space Exploration is now optional.
  Bugfixes:
    - Fix crash when opening GUI without entity. (Thanks LCStark!)
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 14. 07. 2022
  Features:
    - Space Spidertron vehicle capable of flight and space travel.
    - Spidertron Dock for safe travel of spidertrons on spaceships